[UPD] Added d-block and d-none in css, added script to power on and power off the lamp

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,14 @@ body {
     background-color: rgb(173, 171, 171);
 }
 
+.d-none {
+    display: none;
+}
+
+.d-block {
+    display: block;
+}
+
 .d-flex {
     display: flex;
 }
